<resources>
    <string name="app_name">Baking App</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="recipes">Recipes</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="recipe_ingredients">Recipe Ingredients</string>
    <string name="recipes_list">Recipes List</string>
    <string name="add_widget">Add widget</string>
</resources>
